@@ -23,6 +23,8 @@ Base dependencies for jasypt
     * {{{http://jakarta.apache.org/commons/lang/}Apache Jakarta Commons Lang}} 2.1 or higher
     
     * {{{http://jakarta.apache.org/commons/codec/}Apache Jakarta Commons Codec}} 1.1 or higher
+
+  If you are using a Java version < 6 (JDK 1.5 or lower), you will also need:
     
     * {{{http://www.icu-project.org/}International Components for Unicode (ICU)}} 3.4.4 or higher
   
